<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="260dp"
    android:layout_height="130dp"
    android:layout_marginStart="5dp"
    >

    <com.google.android.material.card.MaterialCardView
        android:background="@color/pallete4_color5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/pallete4_color5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/pallete4_color5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:src="@mipmap/sample_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:textColor="@color/black"
                android:id="@+id/materialTextView4"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:gravity="center"
                android:text="@string/title"
                android:textSize="14dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/publisher"
                android:textColor="#2F2F2F"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView4" />


            <com.google.android.material.textview.MaterialTextView
                android:textColor="@color/black"
                android:id="@+id/materialTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="left"
                android:text="@string/minutes_ago"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>

